# talent-plan

courses/rust/docs/: lesson-plan.md
courses/rust/projects/project/: Cargo.toml
courses/rust/projects/project-1-new/: Cargo.toml
courses/rust/projects/project-1-new/src/: kv.rs  lib.rs
courses/rust/projects/project-2-new/src/: kv.rs  lib.rs  wal.rs
courses/rust/projects/project-2-new/tests/: tests.rs
courses/rust/projects/project-diy/: Cargo.toml
courses/rust/projects/project-diy/benches/: engine_bench.rs
courses/rust/projects/project-diy/src/: client.rs  command.rs  error.rs  lib.rs  server.rs
courses/rust/projects/project-diy/src/engines/: kvs.rs  mod.rs  sled.rs
courses/rust/projects/project-diy/tests/: kv_store.rs  tests.rs
courses/rust/projects/project/src/: kv.rs  lib.rs
