[package]
name = "kvs"
version = "0.1.0"
authors = ["Kim Seon Woo <seonwoo960000.kim@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = "2.32.0"
structopt = "0.3.25"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4"
env_logger = "0.11.5"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
